增加start-snowflake.sh脚本，可以前端或nohup运行，生成snowflake.log日志，方便监控调试